# bragibooks

./: .gitignore  CHANGELOG.md  README.md  create-test-files.sh  manage.py  pyproject.toml  requirements.txt
.design/app-refresh/: DESIGN_BRIEF.md  DESIGN_TOKENS.scss  INFORMATION_ARCHITECTURE.md  TASKS.md
.github/workflows/: create-release.yml  docker-publish.yml
bragibooks_proj/: settings.py  urls.py
docker/: .dockerignore  .env.example  Dockerfile  docker-compose.yaml  docker-compose.yml  entrypoint.sh
docs/plans/: tickets.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  _tokens.scss  index.css  main.tsx  styles.scss
frontend/src/api/: client.ts  services.ts
frontend/src/components/: BookCard.tsx  ErrorBoundary.tsx  FileExplorer.tsx  LibraryBookCard.tsx  PageHeader.tsx  Pagination.tsx  ProtectedRoute.tsx  Sidebar.tsx  ToastContainer.tsx
frontend/src/context/: AuthContext.tsx  DataContext.tsx  (+1 more)
importer/: api.py  auth_api.py  forms.py  models.py  spa_view.py  tasks.py  urls.py  users_api.py  views.py
importer/api/: auth.py  books.py  config.py  import_pipeline.py  mixins.py  users.py
importer/migrations/: 0006_rename_completed_directory.py  0007_add_m4b_processing_options.py  0008_add_passkey_credential.py  0009_book_audio_bitrate.py
importer/services/: match.py
importer/templates/: base.html  base_auth.html  book_tabs.html  directory_contents.html  importer.html  importer.js  login.html  register.html  setting.html
importer/templatetags/: directory_explorer_tags.py
utils/: merge.py
(+16 files in other folders)
