[project]
name = "bragibooks"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=2.0",
    "django-cors-headers>=4.0",
    "django-vite>=3.0",
    "django>=6.0",
    "django-tasks-db>=0.1",
    "gunicorn>=20.1.0",
    "Levenshtein>=0.27.3",
    "m4b-merge>=0.5.3",
    "requests>=2.28",
    "whitenoise>=6.12.0",
]

[project.optional-dependencies]
# Install the adapter matching your database:
#   uv sync --extra postgres
#   uv sync --extra mysql
postgres = ["psycopg2-binary>=2.9"]
mysql = ["mysqlclient>=2.2"]
