[project]
name = "bragibooks"
version = "2.0.0"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=2.0",
    "django-cors-headers>=4.0",
    "django-vite>=3.0",
    "django>=6.0",
    "django-tasks-db>=0.1",
    "gunicorn>=20.1.0",
    "Levenshtein>=0.27.3",
    "m4b-merge>=0.5.3",
    "psycopg2-binary>=2.9",
    "requests>=2.28",
    "webauthn>=2.2.0",
    "whitenoise>=6.12.0",
]

[tool.setuptools.packages.find]
include = ["importer*", "bragibooks_proj*", "utils*"]
